--- a/api.yaml
+++ b/api.yaml
@@ -37,6 +37,20 @@ paths:
         '401':
           description: 'One or both of the JWT are not valid'
         required: true
+  /limesurvey/completion/event:
+    post:
+      summary: get completion from limesurvey
+      operationId: GetEvent
+      description: |
+        get completion from limesurvey
+      responses:
+        '200':
+          description: completion from limesurvey
+        '400':
+          description: 'invalid input, object invalid'
+        '401':
+          description: 'One or both of the JWT are not valid'
+        required: true
   /users:
     get:
       tags:
