adding patch endpoints

--- a/api.yaml
+++ b/api.yaml
@@ -636,6 +636,32 @@ paths:
             schema:
               $ref: '#/components/schemas/test'
         description: test to be modified
+    patch:
+      summary: Modifies the test.
+      tags:
+        - teacher
+      operationId: patchTest
+      description: |
+        Modifies the test
+      parameters:
+        - $ref: '#/components/parameters/studyStudyId'
+        - $ref: '#/components/parameters/testId'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/test'
+      responses:
+        '200':
+          description: Test updated
+          schema:
+              $ref: '#/components/schemas/test'
+        '401':
+          description: 'Teacher does not own the class'
+        '400':
+          description: 'invalid input'
+        '404':
+          description: 'Requested study does not exist'
     delete:
       tags:
         - teachers
@@ -835,6 +861,27 @@ paths:
             schema:
               $ref: '#/components/schemas/activity'
         description: activity to be modified
+    patch:
+      summary: Modifies the activity.
+      tags:
+        - teacher
+      operationId: patchActivity
+      description: |
+        Modifies the activity
+      parameters:
+        - $ref: '#/components/parameters/testId'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/activityBody'
+      responses:
+        '200':
+          description: Activity updated
+          schema:
+              $ref: '#/components/schemas/activity'
+        '400':
+          description: 'invalid input, object invalid'
     delete:
       tags:
         - teachers
@@ -2326,6 +2373,18 @@ components:
             example: ObjectId("5d07a0767c1405004bc702af")
         extra_data:
           type: object
+    activityBody:
+      type: object
+      properties:
+        id:
+          type: string
+          example: ObjectId("5d07a0767c1405004bc702af")
+        name:
+          type: string
+          example: "Survey for validation"
+        type:
+          type: string
+          example: "survey, gameplay, etc..."
     activity_type:
       type: object
       required:
