adding all functions

--- a/api.yaml
+++ b/api.yaml
@@ -2553,6 +2553,9 @@ components:
         id:
           type: string
           example: ObjectId("5d07a0767c1405004bc702af")
+        study:
+          type: string
+          example: ObjectId("5d07a0767c1405004bc702af")
         name:
           type: string
           example: "Instance A for my study"
