fix generate api events

--- a/api.yaml
+++ b/api.yaml
@@ -498,6 +498,23 @@ paths:
           description: 'One or both of the JWT are not valid'
       parameters:
         - $ref: '#/components/parameters/studyId'
+  /studies/{id}/events/getPresignedUrl:
+    get:
+      tags:
+        - teachers
+      summary: get getPresignedUrl for Server Side Events to Client for this study
+      operationId: getEventsPresignedUrl
+      description: |
+        get getPresignedUrl Server Side Events to Client
+      responses:
+        '200':
+          description: Event processed
+        '400':
+          description: 'invalid input, object invalid'
+        '401':
+          description: 'One or both of the JWT are not valid'
+      parameters:
+        - $ref: '#/components/parameters/studyId'
   /studies/{id}/schedule:
     get:
       tags:
@@ -538,7 +555,25 @@ paths:
         send Server Side Events to Client
       responses:
         '200':
-          description: Event processed
+          description: presigned URL
+        '400':
+          description: 'invalid input, object invalid'
+        '401':
+          description: 'One or both of the JWT are not valid'
+      parameters:
+        - $ref: '#/components/parameters/studyId'
+  /studies/{id}/schedule/events/getPresignedUrl:
+    get:
+      tags:
+        - teachers
+        - students
+      summary: get getPresignedUrl for Server Side Events to Client for this study
+      operationId: getScheduleEventsPresignedUrl
+      description: |
+        get getPresignedUrl Server Side Events to Client
+      responses:
+        '200':
+          description: presigned URL
         '400':
           description: 'invalid input, object invalid'
         '401':
