adding set get survey title

--- a/api.yaml
+++ b/api.yaml
@@ -1004,6 +1004,39 @@ paths:
           description: 'Not found'
       parameters:
         - $ref: '#/components/parameters/testId'
+  /activities/{id}/surveyproperties:
+    get:
+      tags:
+        - teachers
+      summary: returns the survey properties of a Limesurvey activity 
+      operationId: getSurveyProperties
+      description: |
+        Obtains the survey properties of the Limesurvey activity
+      responses:
+        '200':
+          description: The Survey Properties 
+        '400':
+          description: 'ID is not a valid ObjectId'
+        '404':
+          description: 'Not found'
+      parameters:
+        - $ref: '#/components/parameters/testId'
+    patch:
+      tags:
+        - teachers
+      summary: update the survey properties of a Limesurvey activity 
+      operationId: patchSurveyProperties
+      description: |
+        Update the survey properties of the Limesurvey activity
+      responses:
+        '200':
+          description: The limesurvey activity updated
+        '400':
+          description: 'ID is not a valid ObjectId'
+        '404':
+          description: 'Not found'
+      parameters:
+        - $ref: '#/components/parameters/testId'
   /activities/{id}/open:
     get:
       tags:
