--- a/api.yaml
+++ b/api.yaml
@@ -280,6 +280,21 @@ paths:
             schema:
               $ref: '#/components/schemas/group'
         description: Group to be modified
+    delete:
+      tags:
+        - teachers
+      summary: delete the group
+      operationId: deleteGroup
+      description: delete an existing group
+      responses:
+        '200':
+          description: deleted group
+        '401':
+          description: 'Teacher does not own the group'
+        '400':
+          description: 'invalid input'
+      parameters:
+        - $ref: '#/components/parameters/groupId'
   /groups/{id}/studies:
     get:
       tags:
